# medical_software_development

./: .gitignore  README.md  pyproject.toml
01_development_gene_analyzer/: gene_analyzer.py  gene_analyzer_testing.ipynb
02_GC_Content_1/: 02_GC_Content_1.ipynb  gccompute.py
03_webapp/: gccompute_V2.py  streamlit_app.py
04_cost_estimation/: report.tex
05_software_requirements_specification/: report.md  report.tex
06_design_patterns/: dna2protein.py  utility.py
07_data_collection_service/code_from_david/: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  remote_debug.txt
07_data_collection_service/code_from_david/src/: .coverage  app.py  datastructure.py  datastructuretest.py  dev_env.json  idgenerator.py  prd_env.json  requirements.txt  tst_env.json
08_sensor_overview/: result_08.tex
09_data_collection_app/: basic_data_analysis.ipynb
09_data_collection_app/data/: data.json
10_scientific_question/: make_figures.py  result_10.tex
