[project]
name = "medical-software-development"
version = "0.1.0"
description = ""
authors = [
    {name = "denis.schatzmann@students.fhnw.ch",email = "denis.schatzmann@students.fhnw.ch"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=1.4.0,<3)",
    "jupyter (>=1.1.1,<2.0.0)",
    "streamlit (>=1.55.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
