[project]
name = "medical-software-development"
version = "0.1.0"
description = ""
authors = [
    {name = "denis.schatzmann@students.fhnw.ch",email = "denis.schatzmann@students.fhnw.ch"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=1.4.0,<3)",
    "jupyter (>=1.1.1,<2.0.0)",
    "streamlit (>=1.55.0,<2.0.0)",
    "biopython (>=1.87,<2.0)",
    "flask (>=3.1.3,<4.0.0)",
    "coverage (>=7.14.0,<8.0.0)",
    "psutil (>=7.2.2,<8.0.0)",
    "flasgger (>=0.9.7.1,<0.10.0.0)",
    "pylint (>=4.0.5,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
