[project]
name = "backendservice-davidherzig"
version = "0.1.0"
description = ""
authors = [
    {name = "denis.schatzmann@students.fhnw.ch",email = "denis.schatzmann@students.fhnw.ch"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "psutil (>=7.2.2,<8.0.0)",
    "coverage (>=7.14.1,<8.0.0)",
    "flasgger (>=0.9.7.1,<0.10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "^4.0.5"

